--- a/MsReporte4-main/MsReporte3-main/MsReporte2-main/reporte/src/main/resources/application.properties
+++ b/MsReporte4-main/MsReporte3-main/MsReporte2-main/reporte/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=reporte
-spring.datasource.url=jdbc:mysql://98.84.58.235:3306/prueba
-spring.datasource.username=root
-spring.datasource.password=duoc.2025
+spring.datasource.url=jdbc:mysql://98.85.201.190:3306/reporte
+spring.datasource.username=microservicio_reporte
+spring.datasource.password=msreporte2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
